// Copyright 2015 The etcd Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package database;
option go_package = "github.com/mxplusb/pleiades/pkg/api/v1/database";
import "google/protobuf/timestamp.proto";

message KVStoreWrapper {
  bytes account = 1;
  bytes bucket = 2;

  enum RequestType {
    CREATE_ACCOUNT_REQUEST = 0;
    CREATE_ACCOUNT_REPLY = 1;
    DELETE_ACCOUNT_REQUEST = 2;
    DELETE_ACCOUNT_REPLY = 3;
    GET_ACCOUNT_DESCRIPTOR_REQUEST = 4;
    GET_ACCOUNT_DESCRIPTOR_REPLY = 5;
    CREATE_BUCKET_REQUEST = 6;
    CREATE_BUCKET_REPLY = 7;
    DELETE_BUCKET_REQUEST = 8;
    DELETE_BUCKET_REPLY = 9;
    GET_KEY_REQUEST = 10;
    GET_KEY_REPLY = 11;
    PUT_KEY_REQUEST = 12;
    PUT_KEY_REPLY = 13;
    DELETE_KEY_REQUEST = 14;
    DELETE_KEY_REPLY = 15;
  }

  RequestType typ = 3;
  oneof payload {
    CreateAccountRequest create_account_request = 4;
    CreateAccountReply create_account_reply = 5;
    DeleteAccountRequest delete_account_request = 6;
    DeleteAccountReply delete_account_reply = 7;
    GetAccountDescriptorRequest get_account_descriptor_request = 8;
    GetAccountDescriptorReply get_account_descriptor_reply = 9;
    CreateBucketRequest create_bucket_request = 10;
    CreateBucketReply create_bucket_reply = 11;
    DeleteBucketRequest delete_bucket_request = 12;
    DeleteBucketReply delete_bucket_reply = 13;
    GetKeyRequest get_key_request = 14;
    GetKeyReply get_key_reply = 15;
    PutKeyRequest put_key_request = 16;
    PutKeyReply put_key_reply = 17;
    DeleteKeyRequest delete_key_request = 18;
    DeleteKeyReply delete_key_reply = 19;
  }
}

message CreateAccountRequest {
  uint64 account_id = 1;
  string owner = 2;
}

message CreateAccountReply {
  AccountDescriptor account_descriptor = 1;
}

message DeleteAccountRequest {
  uint64 account_id = 1;
  string owner = 2;
}

message DeleteAccountReply {
  bool ok = 1;
}

message GetAccountDescriptorRequest {
  uint64 account_id = 1;
}

message GetAccountDescriptorReply {
  AccountDescriptor account_descriptor = 1;
}

message AccountDescriptor {
  uint64 account_id = 1;
  string owner = 2;
  google.protobuf.Timestamp created = 3;
  google.protobuf.Timestamp last_updated = 4;
  uint64 bucket_count = 5;
  repeated string buckets = 6;
}

message CreateBucketRequest {
  uint64 account_id = 1;
  string name = 2;
  string owner = 3;
}

message CreateBucketReply {
  BucketDescriptor bucket_descriptor = 1;
}

message DeleteBucketRequest {
  uint64 account_id = 1;
  string name = 2;
}

message DeleteBucketReply {
  bool ok = 1;
}

message BucketDescriptor {
  string owner = 1;
  uint64 size = 2;
  uint64 key_count = 3;
  google.protobuf.Timestamp created = 4;
  google.protobuf.Timestamp last_updated = 5;
}

message GetKeyRequest {
  uint64 account_id = 1;
  string bucket_name = 2;
  string key = 3;
}

message GetKeyReply {
  KeyValue key_value_pair = 1;
}

message PutKeyRequest {
  uint64 account_id = 1;
  string bucket_name = 2;
  KeyValue key_value_pair = 3;
}

message PutKeyReply {}

message DeleteKeyRequest {
  uint64 account_id = 1;
  string bucket_name = 2;
  string key = 3;
}

message DeleteKeyReply {
  bool ok = 1;
}

message KeyValue {
  // key is the key in bytes. An empty key is not allowed.
  string key = 1;
  // create_revision is the revision of last creation on this key.
  int64 create_revision = 2;
  // mod_revision is the revision of last modification on this key.
  int64 mod_revision = 3;
  // version is the version of the key. A deletion resets
  // the version to zero and any modification of the key
  // increases its version.
  int64 version = 4;
  // value is the value held by the key, in bytes.
  bytes value = 5;
  // lease is the ID of the lease that attached to key.
  // When the attached lease expires, the key will be deleted.
  // If lease is 0, then no lease is attached to the key.
  int64 lease = 6;
}

enum KeyOperationType {
  GET = 0;
  PUT = 1;
  DELETE = 2;
}

message Event {
  // type is the kind of event. If type is a PUT, it indicates
  // new data has been stored to the key. If type is a DELETE,
  // it indicates the key was deleted.
  KeyOperationType type = 1;
  // kv holds the KeyValue for the event.
  // A PUT event contains current kv pair.
  // A PUT event with kv.Version=1 indicates the creation of a key.
  // A DELETE/EXPIRE event contains the deleted key with
  // its modification revision set to the revision of deletion.
  KeyValue kv = 2;

  // prev_kv holds the key-value pair before the event happens.
  optional KeyValue prev_kv = 3;
}
