/*
 * Copyright (c) 2022 Sienna Lloyd
 *
 * Licensed under the PolyForm Strict License 1.0.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License here:
 *  https://github.com/mxplusb/pleiades/blob/mainline/LICENSE
 */
package cmd

import (
	"context"
	"net/http"

	kvstorev1 "github.com/mxplusb/pleiades/pkg/api/kvstore/v1"
	"github.com/mxplusb/pleiades/pkg/api/kvstore/v1/kvstorev1connect"
	"github.com/bufbuild/connect-go"
	"github.com/rs/zerolog/log"
	"github.com/spf13/cobra"
	"google.golang.org/protobuf/encoding/protojson"
)

// kvPutCmd represents the bucketPut command
var bucketDeleteCmd = &cobra.Command{
	Use:   "delete",
	Short: "delete a bucket",
	Run:   bucketDelete,
}

func init() {
	bucketCmd.AddCommand(bucketDeleteCmd)
}

func bucketDelete(cmd *cobra.Command, args []string) {
	err := cmd.Flags().Parse(args)
	if err != nil {
		log.Fatal().Err(err).Msg("can't parse flags")
	}

	logger := setupLogger(cmd, args)
	logger = logger.With().Uint64("account-id", accountId).Str("bucket", bucketName).Logger()

	if accountId == 0 {
		logger.Fatal().Msg("account id cannot be zero")
	}

	client := kvstorev1connect.NewKvStoreServiceClient(http.DefaultClient, "http://localhost:8080")

	descriptor, err := client.DeleteBucket(context.Background(), connect.NewRequest(&kvstorev1.DeleteBucketRequest{
		AccountId: accountId,
		Name:      bucketName}))
	if err != nil {
		logger.Fatal().Err(err).Msg("can't delete bucket")
	}

	print(protojson.Format(descriptor.Msg))
}
